--- a/src/assets/style/todoCard.scss
+++ b/src/assets/style/todoCard.scss
@@ -48,7 +48,8 @@
             color: #17a14e;
         }
         .todo-subtask-text {
-            margin-left: 16px;
+            // margin-left: 16px;
+            margin: 6px 6px 6px 16px;
         }
     }
 }
